<resources>
    <string name="app_name">Course Catalog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="term_button_text">Terms</string>
    <string name="course_button_text">Courses</string>
    <string name="mentor_button_text">Mentors</string>
    <string name="assessment_button_text">Assessments</string>
    <string name="term_title_hint">Term Title</string>
    <string name="save_term_button_text">Save Term</string>
    <string name="enter_start_date_hint">Enter Start Date</string>
    <string name="enter_end_date_hint">Enter End Date</string>
    <string name="add_course_to_term_text">Add Course to Term</string>
    <string name="choose_course_instructions_text">Choose a course to add to your term</string>
    <string name="status_label_text">Status:</string>
    <string name="projected_end_date_text">Projected End Date:</string>
    <string name="start_date_label_text">Start Date:</string>
    <string name="due_text">due</string>
    <!--holds an array of options available for user to choose course status-->
    <string-array name="course_status_array">
        <item>plan to take</item>
        <item>in progress</item>
        <item>completed</item>
        <item>dropped</item>
    </string-array>
    <!--holds an array of options available for user to choose assessment type-->
    <string-array name="assessment_type_array">
        <item>objective</item>
        <item>performance</item>
    </string-array>
</resources>
