<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

        <!-- Binding for viewmodel-->
        <variable name="mainMenuViewModel"
                  type="com.example.coursecatalog.MainMenuViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainMenuFragment" android:id="@+id/frameLayout">
        <Button
                android:text="@string/term_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/term_button"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:onClick="@{() -> mainMenuViewModel.onTermsButtonClicked()}"/>
        <Button
                android:text="@string/course_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/course_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintTop_toBottomOf="@+id/term_button"/>
        <Button
                android:text="@string/mentor_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/mentor_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintTop_toBottomOf="@+id/course_button"/>
        <Button
                android:text="@string/assessment_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/assessment_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintTop_toBottomOf="@+id/mentor_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>