<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <!--bind data to view model-->
        <variable name="termDetailViewModel"
                  type="com.example.coursecatalog.terms.TermDetailViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".terms.TermDetailFragment"
    >
        <EditText
                android:text="Term Title"
                android:maxLines="1"
                android:lines="1"
                android:maxLength="20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/term_title"
                app:layout_constraintTop_toTopOf="parent"
                app:termTitleFormatted="@{termDetailViewModel.term}"
                android:layout_marginStart="@dimen/small_margin" android:textStyle="bold"
                android:layout_marginTop="@dimen/medium_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:inputType="textShortMessage"
                android:hint="@string/term_title_hint"/>
        <EditText
                android:text="Start Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_date_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/term_title"
                app:startDateFormatted="@{termDetailViewModel.term}"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:hint="@string/enter_start_date_hint"
                android:inputType="date"/>
        <EditText
                android:text="End Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/end_date_text"
                app:layout_constraintStart_toStartOf="parent"
                app:endDateFormatted="@{termDetailViewModel.term}"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:hint="@string/enter_end_date_hint"
                app:layout_constraintTop_toBottomOf="@+id/start_date_text"
                android:inputType="date"/>
        <Button
                android:text="@string/save_term_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/term_save_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                app:layout_constraintTop_toBottomOf="@+id/end_date_text"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/term_course_list"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/course_add_button"
                android:src="@android:drawable/ic_input_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/term_course_list"
                android:onClick="@{() -> termDetailViewModel.onNavigateToCoursePicker()}"/>
        <TextView
                android:text="Courses for This Term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/term_save_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textStyle="bold" android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>