<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable name="courseDetailViewModel"
                  type="com.example.coursecatalog.courses.CourseDetailViewModel"/>
    </data>
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
                                           app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                           android:isScrollContainer="true"
                                           android:measureAllChildren="true">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".courses.CourseTermDetailFragment"
                android:id="@+id/frameLayout2">

            <EditText
                    tools:text="Course Title"
                    android:text=""
                    app:courseTitleFormatted="@{courseDetailViewModel.course}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/course_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/small_margin"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:inputType="text" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/course_status_spinner"
                    android:layout_marginStart="@dimen/small_margin"
                    app:layout_constraintTop_toBottomOf="@+id/status_text" android:layout_marginTop="8dp"/>
            <EditText
                    android:id="@+id/start_date"
                    app:courseStartDateFormatted="@{courseDetailViewModel.course}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="8"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/start_date_label"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/start_date_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_date_label"
                    app:layout_constraintTop_toBottomOf="@+id/course_status_spinner"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/projected_end_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/end_date_label"
                    app:layout_constraintTop_toTopOf="@+id/start_date_label"
                    app:layout_constraintStart_toStartOf="@+id/end_date"/>
            <EditText
                    android:id="@+id/end_date"
                    app:courseEndDateFormatted="@{courseDetailViewModel.course}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="8"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/start_date_label"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/start_date"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/status_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status_text"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/course_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:text="Mentor Name:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mentor_name_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/start_date"/>
            <EditText
                    android:id="@+id/mentor_name"
                    app:mentorName="@{courseDetailViewModel.course.mentor}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:ems="@integer/small_edit_text_ems"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/mentor_name_label"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="Mentor Phone:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mentor_phone_label"
                    app:layout_constraintBottom_toTopOf="@+id/mentor_phone"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintStart_toStartOf="@+id/mentor_phone"/>
            <EditText
                    android:id="@+id/mentor_phone"
                    app:mentorPhone="@{courseDetailViewModel.course.mentor}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="@integer/small_edit_text_ems"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/mentor_name"
                    app:layout_constraintTop_toTopOf="@+id/mentor_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="Mentor Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mentor_email_label"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/mentor_name"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <EditText
                    android:id="@+id/mentor_email"
                    app:mentorEmail="@{courseDetailViewModel.course.mentor}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="@integer/small_edit_text_ems"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/mentor_email_label"/>
            <EditText
                    android:id="@+id/notes"
                    app:courseNotes="@{courseDetailViewModel.course}"
                    android:layout_marginStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="@integer/small_edit_text_ems"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/notes_label" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="Notes:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/notes_label" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/mentor_email" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" app:srcCompat="@android:drawable/ic_menu_delete"
                    android:id="@+id/delete_button" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:backgroundTint="#F44336"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" app:srcCompat="@android:drawable/ic_lock_idle_alarm"
                    android:id="@+id/addAlarmButton" app:backgroundTint="#2196F3" android:tint="#00FFFFFF"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mentor_phone"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/notes"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" app:srcCompat="@android:drawable/ic_menu_save"
                    android:id="@+id/save_button" app:backgroundTint="#4CAF50" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/assessment_button" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="Course Title:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <Button
                    android:text="View Assessments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/assessment_button"
                    android:background="#03A9F4" android:textColor="#FFFFFF"
                    app:layout_constraintTop_toBottomOf="@+id/notes" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>